# python-project-50

./: README.md  demo.cast  file1.json  file2.json  pyproject.toml  test_library.py
gendiff/diff/: core.py
gendiff/scripts/: gendiff.py
